--- a/index.html
+++ b/index.html
@@ -5,5 +5,11 @@
     <title>Rock Paper Scissors</title>
     <script src="game.js"></script>
   </head>
-  <body></body>
+  <body>
+    <div class="Selections">
+      <button type="button">Rock</button>
+      <button type="button">Paper</button>
+      <button type="button">Scissors</button>
+    </div>
+  </body>
 </html>
