Used id on buttons to distinguish each one

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <title>Rock Paper Scissors</title>
-    <script src="game.js"></script>
+    <script src="game.js" defer></script>
   </head>
   <body>
     <div class="Selections">
-      <button type="button">Rock</button>
-      <button type="button">Paper</button>
-      <button type="button">Scissors</button>
+      <button id="Rock" type="button">Rock</button>
+      <button id="Paper" type="button">Paper</button>
+      <button id="Scissors" type="button">Scissors</button>
     </div>
   </body>
 </html>
